# KTANE-Auto-Scripts

./: .gitignore  README.md  README_YOLO.md  SETUP.md  pyproject.toml
Damn/scripts/: maze_module.py
docs/: ANNOTATION_GUIDE.md  MODEL_USAGE.md  QUICKSTART_INFERENCE.md  README.md  requirements_automation.txt.deprecated  requirements_yolo.txt.deprecated
scripts/: auto_annotate_helper.py  auto_bomb_solver.py  check_gpu.py  control_system.py  copy_torch_from_env.py  dataset_collector.py  decision_maker.py  iterative_annotation_system.py  prepare_yolo_dataset.py  quality_checker.py  state_manager.py  test_model.py  train_yolo.py  vision_system.py  visualize_annotations.py  yolo_editor.py
